Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Create move also from supplier to customer
* Define "Stock Journal" on "Account Configuration"
* Use cost price instead of unit price when cost method is "fixed"

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Initial release