@@ -1,7 +1,7 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
 from trytond.model import Model, fields
-from trytond.pyson import Eval, Bool
+from trytond.pyson import Eval, Bool, Get
 
 
 class Configuration(Model):
@@ -12,5 +12,9 @@ class Configuration(Model):
             states={
                 'required': Bool(Eval('context', {}).get('company')),
                 }))
+    cost_price_counterpart_account = fields.Property(fields.Many2One(
+            'account.account', 'Cost Price Counterpart Account', domain=[
+                ('company', 'in', [Get(Eval('context', {}), 'company'), None]),
+                ]))
 
 Configuration()
