@@ -15,6 +15,8 @@ this repository contains the full copyright notices and license terms. -->
                         <newline/>
                         <label name="stock_journal"/>
                         <field name="stock_journal"/>
+                        <label name="cost_price_counterpart_account"/>
+                        <field name="cost_price_counterpart_account"/>
                         <newline/>
                     </xpath>
                 </data>
