@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<tryton>
+    <data>
+        <record model="ir.ui.view" id="stock_configuration_form">
+            <field name="model">stock.configuration</field>
+            <field name="inherit" ref="stock.stock_configuration_view_form"/>
+            <field name="arch" type="xml">
+                <![CDATA[
+                <data>
+                    <xpath expr="//field[@name='shipment_internal_sequence']"
+                        position="after">
+                        <label name="cost_price_counterpart_account"/>
+                        <field name="cost_price_counterpart_account"/>
+                    </xpath>
+                </data>
+                ]]>
+            </field>
+        </record>
+        <record model="ir.action.act_window.view" id="stock.act_stock_configuration_view1">
+            <field name="view" ref="stock_configuration_form"/>
+        </record>
+    </data>
+</tryton>
