@@ -3,6 +3,55 @@
 this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
+        <record model="ir.ui.view" id="update_cost_price_ask_form">
+            <field name="model">product.update_cost_price.ask</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <![CDATA[
+                <form string="Update Cost Price" cursor="cost_price">
+                    <label name="product"/>
+                    <field name="product"/>
+                    <label name="cost_price"/>
+                    <field name="cost_price"/>
+                </form>
+                ]]>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="update_cost_price_show_move_form">
+            <field name="model">product.update_cost_price.show_move</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <![CDATA[
+                <form string="Update Cost Price - Move">
+                    <label name="journal"/>
+                    <field name="journal"/>
+                    <newline/>
+                    <label name="amount"/>
+                    <field name="amount"/>
+                    <label name="price_difference"/>
+                    <field name="price_difference"/>
+                    <label name="stock_account"/>
+                    <field name="stock_account"/>
+                    <label name="counterpart"/>
+                    <field name="counterpart"/>
+                </form>
+                ]]>
+            </field>
+        </record>
+        <record model="ir.action.wizard" id="wizard_update_cost_price">
+            <field name="name">Update Cost Price</field>
+            <field name="wiz_name">product.update_cost_price</field>
+        </record>
+        <record model="ir.action.keyword" id="update_cost_price_keyword">
+            <field name="keyword">form_action</field>
+            <field name="model">product.product,-1</field>
+            <field name="action" ref="wizard_update_cost_price"/>
+        </record>
+        <record model="ir.action-res.group"
+            id="wizard_update_cost_price-group_account">
+            <field name="action" ref="wizard_update_cost_price"/>
+            <field name="group" ref="account.group_account" />
+        </record>
 
         <record model="ir.ui.view" id="category_view_form">
             <field name="model">product.category</field>
@@ -51,6 +100,5 @@ this repository contains the full copyright notices and license terms. -->
                 ]]>
             </field>
         </record>
-
     </data>
 </tryton>
