@@ -1,3 +1,5 @@
+* Updating cost price must update stock accounting
+
 Version 2.4.0 - 2012-04-23
 * Bug fixes (see mercurial logs for details)
 * Create move also from supplier to customer
